--- a/styles/products.css
+++ b/styles/products.css
@@ -111,7 +111,7 @@
   padding: 0.5rem;
 
   cursor: pointer;
-  z-index: 10;
+  z-index: 5;
 }
 
 @media (min-width: 320px) {
